Modal height fixed on mobile.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -107,7 +107,7 @@ body {
   color: $grey;
 
   @media (max-width: 720px) {
-    height: 120%;
+    min-height: 120%;
   }
 }
 
